# muharrir

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs  command_usage.rs
scripts/: bench-history.sh
src/: command.rs  dirty.rs  error.rs  expr.rs  hierarchy.rs  history.rs  hw.rs  inspector.rs  lib.rs  notification.rs  prefs.rs  recent.rs  selection.rs
tests/: integration.rs
